# v2-samplesheet-parser

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/v2_samplesheet_parser/: __init__.py  parser.py
src/v2_samplesheet_parser/functions/: parser.py  retriever.py  reverter.py  util.py
src/v2_samplesheet_parser/models/: bcl_convert_sections.py  cloud_sections.py  run_info_sections.py  tso500l_sections.py  tso500s_sections.py
tests/v2_samplesheet_parser/: test_samplesheet_parser.py
