[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "v2-samplesheet-parser"
version = "0.1.0"
description = "A parser for Illumina Sample Sheet v2 format"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Ray Liu", email = "ray.liu@unimelb.edu.au" }
]
dependencies = [
    "pydantic>=2.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Home = "https://github.com/umccr/v2-samplesheet-parser"
Issue = "https://github.com/umccr/v2-samplesheet-parser/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/v2_samplesheet_parser"]

[tool.hatch.build]
include = [
    "src/v2_samplesheet_parser/**/*.py",
]

[tool.hatch.metadata]
allow-direct-references = true